fixes: get rid of methods in entity WebAgency