@@ -1,25 +1,21 @@
 /* (C)2023 */
 package org.transitclock.domain.webstructs;
 
-import jakarta.persistence.*;
-import lombok.Data;
-import lombok.extern.slf4j.Slf4j;
-import org.hibernate.HibernateException;
-import org.hibernate.Session;
-import org.hibernate.Transaction;
-import org.hibernate.annotations.DynamicUpdate;
-import org.transitclock.domain.hibernate.HibernateUtils;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
+import java.util.List;
+
 import org.transitclock.domain.repository.AgencyRepository;
 import org.transitclock.domain.structs.ActiveRevision;
 import org.transitclock.domain.structs.Agency;
 import org.transitclock.utils.Encryption;
-import org.transitclock.utils.IntervalTimer;
-import org.transitclock.utils.Time;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
+import org.hibernate.annotations.DynamicUpdate;
 
 /**
  * For keeping track of agency data for a website. Contains info such as the host of the agency so
@@ -37,41 +33,27 @@ public class WebAgency {
     @Id
     @Column(length = 60)
     private final String agencyId;
-
     @Column(length = 120)
     private final String hostName;
-
     @Column
     private final boolean active;
-
     @Column(length = 60)
     private final String dbName;
-
     @Column(length = 60)
     private final String dbType;
-
     @Column(length = 120)
     private final String dbHost;
-
     @Column(length = 60)
     private final String dbUserName;
-
     // Passwords should be stored encrypted since multiple people might have
     // access to the database containing the WebAgency objects.
     @Column(length = 60)
     private final String dbEncryptedPassword;
-
     // For getting GTFS data about agency
     @Transient
     private Agency agency;
-
     @Transient
     private String agencyName;
-
-    // Cache. Keyed on agencyId
-    private static Map<String, WebAgency> webAgencyMapCache;
-    private static long webAgencyMapCacheReadTime = 0;
-    private static List<WebAgency> webAgencyOrderedList;
 
     /**
      * Simple constructor.
@@ -104,7 +86,9 @@ public class WebAgency {
         this.dbEncryptedPassword = Encryption.encrypt(dbPassword);
     }
 
-    /** Needed because Hibernate requires no-arg constructor for reading in data */
+    /**
+     * Needed because Hibernate requires no-arg constructor for reading in data
+     */
     @SuppressWarnings("unused")
     protected WebAgency() {
         this.agencyId = null;
@@ -115,24 +99,6 @@ public class WebAgency {
         this.dbHost = null;
         this.dbUserName = null;
         this.dbEncryptedPassword = null;
-    }
-
-    /**
-     * Stores this WebAgency object in the specified db.
-     *
-     * @param dbName Name of the db that the WebAgency object is stored in
-     */
-    public void store(String dbName) {
-        Transaction transaction = null;
-        try (Session session = HibernateUtils.getSession(dbName)) {
-            transaction = session.beginTransaction();
-            session.persist(this);
-            transaction.commit();
-        } catch (Exception e) {
-            transaction.rollback();
-            logger.warn("There is already a configuration for provided web-agency.");
-            throw new IllegalArgumentException("There is already a configuration for provided web-agency.");
-        }
     }
 
     /**
@@ -149,7 +115,7 @@ public class WebAgency {
         if (agency == null) {
             int configRev = ActiveRevision.get(agencyId).getConfigRev();
             List<Agency> agencies = AgencyRepository.getAgencies(agencyId, configRev);
-            agency = agencies.get(0);
+            agency = agencies.getFirst();
         }
 
         // Return the RMI based agency object
@@ -164,7 +130,9 @@ public class WebAgency {
      * @return The GTFS agency name
      */
     public String getAgencyName() {
-        if (agencyName != null) return agencyName;
+        if (agencyName != null) {
+            return agencyName;
+        }
 
         // Get agency object via RMI
         Agency agency = getAgency();
@@ -175,171 +143,5 @@ public class WebAgency {
         // means that would hang for a few seconds each call until timed out.
         agencyName = agency != null ? agency.getName() : agencyId;
         return agencyName;
-    }
-
-
-    /**
-     * Reads in WebAgency objects from the database and returns them as a map keyed on agencyId.
-     *
-     * @return
-     * @throws HibernateException
-     */
-    private static Map<String, WebAgency> getMapFromDb() throws HibernateException {
-        IntervalTimer timer = new IntervalTimer();
-
-        try (Session session = HibernateUtils.getSession()) {
-            List<WebAgency> list =  session
-                    .createQuery("FROM WebAgency", WebAgency.class)
-                    .list();
-            Map<String, WebAgency> map = new HashMap<>();
-            for (WebAgency webAgency : list) {
-                map.put(webAgency.getAgencyId(), webAgency);
-            }
-
-            logger.info(
-                    "Done reading WebAgencies from database. Took {} msec. They are {}",
-                    timer.elapsedMsec(),
-                    map.values());
-            return map;
-        }
-        // Make sure that the session always gets closed, even if
-        // exception occurs
-    }
-
-    /**
-     * If the cache of WebAgency objects not read in for a while then reads the WebAgency objects
-     * from the db.
-     *
-     * <p>Not synchronized since webAgencyMapCache is set in a single operation and it is OK if read
-     * db twice on rare occurrence.
-     *
-     * @param rereadIfOlderThanMsecs If web agencies read from db more than this time ago then they
-     *     are read in again.
-     * @return True if data was reread from db
-     */
-    private static boolean updateCacheIfShould(long rereadIfOlderThanMsecs) {
-        // If haven't read in web agencies yet or in a while, do so now
-        if (webAgencyMapCache == null || System.currentTimeMillis() - webAgencyMapCacheReadTime > rereadIfOlderThanMsecs) {
-            webAgencyMapCache = getMapFromDb();
-            webAgencyMapCacheReadTime = System.currentTimeMillis();
-
-            // Read data from db so return true
-            return true;
-        } else {
-            // Didn't have to read data from db so return false
-            return false;
-        }
-    }
-
-    /**
-     * Gets list of web agencies, ordered by their agency names. Uses cached version if possible.
-     * But if data not read from db since more than 5 minutes ago then will reread database. This
-     * way when this method is used to indicate which agencies are available the list will
-     * automatically show additions or deletions.
-     *
-     * <p>Not synchronized since webAgencyOrderedList is set in a single operation and it is OK if
-     * read twice on rare occurrence.
-     *
-     * @return List of WebAgency objects ordered by their agency names.
-     */
-    public static synchronized List<WebAgency> getCachedOrderedListOfWebAgencies() {
-        // Reread web agencies from db if enough time has elapsed
-        boolean reread = updateCacheIfShould(5 * Time.MIN_IN_MSECS);
-
-        if (reread || webAgencyOrderedList == null) {
-            List<WebAgency> webAgencyOrderedListTemp = new ArrayList<>(webAgencyMapCache.values());
-
-            // Sort the list
-            webAgencyOrderedListTemp.sort((o1, o2) -> {
-                // Handle possibility of null agency name
-                String agencyName1 = o1.getAgencyName();
-                if (agencyName1 == null) agencyName1 = "";
-                String agencyName2 = o2.getAgencyName();
-                if (agencyName2 == null) agencyName2 = "";
-
-                return agencyName1.compareTo(agencyName2);
-            });
-
-            // Now that the list has been fully created set the member variable
-            webAgencyOrderedList = webAgencyOrderedListTemp;
-        }
-
-        return webAgencyOrderedList;
-    }
-
-    /**
-     * Returns map of all agencies. Values are cached so won't be automatically updated when
-     * agencies are changed in the database. Will update cache if haven't done so in
-     * rereadIfOlderThanMsecs. This way will automatically get new agencies that are added yet will
-     * not be reading from the database for every page hit that needs list of agencies. Also,
-     * agencies automatically removed.
-     *
-     * @param rereadIfOlderThanMsecs If web agencies read from db more than this time ago then they
-     *     are read in again.
-     * @return the cached map of WebAgency objects
-     */
-    private static Map<String, WebAgency> getWebAgencyMapCache(long rereadIfOlderThanMsecs) {
-        updateCacheIfShould(rereadIfOlderThanMsecs);
-
-        return webAgencyMapCache;
-    }
-
-    /**
-     * Gets specified WebAgency from the cache. Rereads WebAgencies from db if cache is older than
-     * rereadIfOlderThanMsecs.
-     *
-     * @param agencyId
-     * @param rereadIfOlderThanMsecs If web agencies read from db more than this time ago then they
-     *     are read in again.
-     * @return The specified WebAgency, or null if it doesn't exist.
-     */
-    public static WebAgency getCachedWebAgency(String agencyId, long rereadIfOlderThanMsecs) {
-        // Get the web agency from the cache
-        WebAgency webAgency = getWebAgencyMapCache(rereadIfOlderThanMsecs).get(agencyId);
-
-        // If WebAgency for agencyId doesn't exist yet it could be because
-        // it is a newly configured agency. In this case should update
-        // cache and check again, even if was told to not update the cache.
-        // Note: the reason that can be told to not update the cache is
-        // when just doing a regular RMI call. Can do many of these calls
-        // and don't want to access the database unless there is an actual
-        // problem. But the possibility of a new agency having been configured
-        // is a special case where do need to update the cache.
-        // And of course don't want to cause problems by repeatedly accessing
-        // the db if an agency doesn't exist anymore. Therefore if want to
-        // update the WebAgency cache should only do so once in a while, which
-        // is rereadTimeIfWebAgencyNotFoundMsecs is set to 1 minute.
-        long rereadTimeIfWebAgencyNotFoundMsecs = Time.MIN_IN_MSECS;
-        if (webAgency == null && rereadTimeIfWebAgencyNotFoundMsecs < rereadIfOlderThanMsecs) {
-            webAgency = getWebAgencyMapCache(rereadTimeIfWebAgencyNotFoundMsecs).get(agencyId);
-        }
-
-        // If web agency was not in cache update the cache and try again
-        if (webAgency == null) {
-            logger.error(
-                    "Did not find agencyId={} in WebAgencies table"
-                            + ". Will reload data from database to see if "
-                            + "agency only recently added.",
-                    agencyId);
-        }
-
-        // Return the possibly null web agency
-        return webAgency;
-    }
-
-    /**
-     * Gets specified WebAgency from the cache. Doesn't cause the cache of WebAgencies to be
-     * reloaded from the db.
-     *
-     * @param agencyId
-     * @return The specified WebAgency, or null if it doesn't exist.
-     */
-    public static WebAgency getCachedWebAgency(String agencyId) {
-        return getCachedWebAgency(agencyId, Integer.MAX_VALUE);
-    }
-
-
-    public String getDbPassword() {
-        return Encryption.decrypt(dbEncryptedPassword);
     }
 }
